[10883051] fixing a word spacing problem

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -64,7 +64,7 @@ a { text-decoration:none; color:#3c3c3c; }
 }
 
 #logo {
-	font-size: 14px;
+	font-size: 13px;
 	padding: 0;
 	margin: 5px;
 	display: inline-block;
